correction mobile

--- a/src/styles/games/_jumper.scss
+++ b/src/styles/games/_jumper.scss
@@ -2,6 +2,7 @@ $colorBonus : rgb(143, 236, 106);
 
 .windowGame.Runner{
     cursor: none;
+    height: 100vh;
 }
 
 .container-jumper{
